tests/ui/cast/cast-to-nil.stderr
error[E0605]: non-primitive cast: `u32` as `()`
  --> $DIR/cast-to-nil.rs:1:21
   |
LL | fn main() { let u = 0u32 as (); }
   |                     ^^^^^^^^^^ an `as` expression can only be used to convert between primitive types or to coerce to a specific trait object

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0605`.
