tests/ui/cast/cast-to-nil.rs
fn main() { let u = 0u32 as (); } //~ ERROR non-primitive cast: `u32` as `()`
